Add skeleton MusicBrainz query context

--- a/README
+++ b/README
@@ -63,7 +63,8 @@ Installation
 * id3lib version greater than 3.7.12 (http://id3lib.sourceforge.net) (Recommended: id3lib-3.8.3) (if not deactivated by './configure --disable-id3v23')
 * flac (http://flac.sourceforge.net) (if not deactivated by './configure --disable-flac')
 * libogg and libvorbis (http://www.vorbis.com) (if not deactivated by './configure --disable-ogg')
-* libnautilus-extension (https://wiki.gnome.org/Apps/Nautilus) (if not deactivated by ./configure --disable-nautilus-actions')
+* libnautilus-extension (https://wiki.gnome.org/Apps/Nautilus) (if not deactivated by './configure --disable-nautilus-actions')
+* musicbrainz5 (https://wiki.musicbrainz.org/libmusicbrainz) (if not deactivated by './configure --disable-musicbrainz')
 * opus and opusfile (http://www.opus-codec.org/) (if not deactivated by './configure --disable-opus')
 * taglib (http://taglib.github.com/) (if not deactivated by './configure --disable-mp4')
 * wavpack (http://www.wavpack.com/) (if not deactivated by './configure --disable-wavpack')
